--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/api": "^3.1.12",
+    "@aws-amplify/ui-vue": "^0.2.6",
+    "aws-amplify": "^3.0.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
